removed container, applied max-width property to card through css. Prevents card becoming too large on all screens, butallows it to span entire screen on phones/tablets.

--- a/3hw/style.css
+++ b/3hw/style.css
@@ -1,6 +1,11 @@
+/*Styling for generator box*/
+.card{
+    max-width: 900px;
+}
 .card-body{
     border-style: dashed;
 }
+/*Reduces jumbotron size, removes bottom margin on phone screens*/
 @media only screen and (max-width: 750px){
    .jumbotron{
        height: 160px;
@@ -11,4 +16,3 @@
    .jumbotron h1{
        margin-bottom: 0px;
    }
-}
